- Changes related to new image comparisons archive and its integration into POTW.

--- a/src/djangoplicity/newsletters/templates/newsletters/includes/header.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/header.html
@@ -12,6 +12,9 @@
 </tr>
 {% if main_image %}
 	{% include "newsletters/includes/main_image.html" %}
+{% endif %}
+{% if main_comparison %}
+	{% include "newsletters/includes/main_comparison.html" %}
 {% endif %} 
 </table>
 <!-- // End Template Header \\ -->
