--- a/src/djangoplicity/newsletters/templates/newsletters/includes/right_potws.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/right_potws.html
@@ -5,7 +5,8 @@
 
 {% for obj in potws %}
 <div style="font-family: Helvetica, Arial;font-size: 12px;color:#505050;">
-<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.image.get_absolute_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}{{ARCHIVE_ROOT}}images/frontpagethumbs/{{obj.image.id}}.jpg" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.image.release_date|date}}</strong><br /><a href="{{base_url}}{{obj.image.get_absolute_url}}">{{ obj.image.title }}</a></p>
+{% if obj.image %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.image.get_absolute_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}{{ARCHIVE_ROOT}}images/frontpagethumbs/{{obj.image.id}}.jpg" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.image.release_date|date}}</strong><br /><a href="{{base_url}}{{obj.image.get_absolute_url}}">{{ obj.image.title }}</a></p>
+{% endif %}{% if obj.comparison %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.comparison.get_absolute_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}{{ARCHIVE_ROOT}}imagecomparisons/frontpagethumbs/{{obj.comparison.id}}.jpg" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.comparison.release_date|date}}</strong><br /><a href="{{base_url}}{{obj.comparison.get_absolute_url}}">{{ obj.comparison.title }}</a></p>{% endif %}
 </div>
 {% endfor %}
 {% endif %}
