--- a/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
@@ -12,7 +12,7 @@ EMBARGOED* UNTIL {{release.release_date|time4lang:"en"|datetime:"DATETIME" }}
 
 
 {% block translations %}
-{%if release.get_translations_by.language %}<p>Translations are available in: {% for translation in release.get_translations_by.language %}<a href="{%if translation.release_url != 'http://'%}{{base_url}}{%endif%}{{translation.release_url}}">{{translation.language}}</a>{% if not forloop.last %}, {% endif %}{%endfor%}</p>
+{%if release.get_translations.languages %}<p>Translations are available in: {% for translation in release.get_translations.languages %}<a href="{{base_url}}{{translation.object.get_absolute_url}}">{{translation.name}}</a>{% if not forloop.last %}, {% endif %}{%endfor%}</p>
 {% endif %}
 {% if release.kids_title and release.kids_description %}<p>Space Scoop - the children's version of this release is available at: <a href="{{base_url}}{% url releases_detail_kids release %}">{{base_url}}{% url releases_detail_kids release %}</a></p>{% endif %}{% endblock %}
 
