--- a/src/djangoplicity/newsletters/templates/newsletters/includes/footer.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/footer.html
@@ -16,7 +16,7 @@
                                                                 {% endif %}{% if obj.comparison %}
                                                                 <a href="{{base_url}}{{obj.comparison.get_absolute_url}}"><img style="border:0px;margin:2px;" src="{{base_url}}{{MEDIA_URL}}{{ARCHIVE_ROOT}}/images/wallpaperthumbs/{{obj.comparison.id}}.jpg" alt="{{obj.comparison.title}}"></img></a>&nbsp;{% endif %}
                                                                 {% endfor %}
-                                                                <div style="font-size:16px;color:white; padding-top: 5px;"><a href="{{potw_feed_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;<a style="font-size:16px;color:white;text-decoration:none;" href="{{base_url}}/images/potw/">{{ org }} Pictures of the Week</a>
+                                                                <div style="font-size:16px;color:white; padding-top: 5px;"><a href="{{potw_feed_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;<a style="font-size:16px;color:white;text-decoration:none;" href="{{base_url}}{% url potw_defaultquery %}">{{ org }} Pictures of the Week</a>
                                                                 <hr size="1" style="color: #bbbbbb; background-color: #bbbbbb; border: 0; height: 1px;" /> 
                                                                 </div>
                                                                 {% endif %} 
