--- a/src/djangoplicity/newsletters/templates/newsletters/includes/right_potws.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/right_potws.html
@@ -1,12 +1,13 @@
+{% load i18n %}
 {% if potws %}
 <h3 class="h3" style="color: #285A97;display: block;font-family: Helvetica, Arial;font-size: 12px;font-weight: bold;line-height: 100%;margin-top: 10px;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;">
-<a href="{{feed_url}}"><img border="0"  src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="{{base_url}}{% url potw_defaultquery %}">Picture{{ potws|pluralize }} of the Week</a>
+	<a href="{{feed_url}}"><img border="0"  src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="{{base_url}}{% url potw_defaultquery %}">{% blocktrans count counter=potws|length %}Picture of the Week{% plural %}Pictures of the Week{% endblocktrans %}</a>
 </h3> 
 
 {% for obj in potws %}
 <div style="font-family: Helvetica, Arial;font-size: 12px;color:#505050;">
-{% if obj.image %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.image.get_absolute_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}{{ARCHIVE_ROOT}}images/frontpagethumbs/{{obj.image.id}}.jpg" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.image.release_date|date}}</strong><br /><a href="{{base_url}}{{obj.image.get_absolute_url}}">{{ obj.image.title }}</a></p>
-{% endif %}{% if obj.comparison %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.comparison.get_absolute_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}{{ARCHIVE_ROOT}}imagecomparisons/frontpagethumbs/{{obj.comparison.id}}.jpg" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.comparison.release_date|date}}</strong><br /><a href="{{base_url}}{{obj.comparison.get_absolute_url}}">{{ obj.comparison.title }}</a></p>{% endif %}
+{% if obj.image %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.image.get_absolute_url}}"><img border="0" src="{{base_url}}{{obj.image.resource_frontpagethumbs.url}}" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.image.release_date|date}}</strong><br /><a href="{{base_url}}{{obj.image.get_absolute_url}}">{{ obj.image.title }}</a></p>
+{% endif %}{% if obj.comparison %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.comparison.get_absolute_url}}"><img border="0" src="{{base_url}}{{obj.comparison.resource_frontpagethumbs.url}}" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.comparison.release_date|date}}</strong><br /><a href="{{base_url}}{{obj.comparison.get_absolute_url}}">{{ obj.comparison.title }}</a></p>{% endif %}
 </div>
 {% endfor %}
 {% endif %}
