Added missing translations to templates

--- a/src/djangoplicity/newsletters/templates/newsletters/includes/archiveobjects.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/archiveobjects.html
@@ -1,7 +1,8 @@
+{% load i18n %}
 {% load url from future %}{% if objects %}
 <h2 class="h2" style="{{h2_style}}">
 {% if feed_url %}<a href="{{feed_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;{% endif %}
-<a style="color: #285A97;font-size: 15px;font-weight: bold; text-decoration:none;" href="{{base_url}}{% if urlpattern %}{% url urlpattern %}{% else %}{{direct_url}}{%endif%}">{% if org %}{{org}} {% endif %}{{title}}</a>
+<a style="color: #285A97;font-size: 15px;font-weight: bold; text-decoration:none;" href="{{base_url}}{% if urlpattern %}{% url urlpattern %}{% else %}{{direct_url}}{%endif%}">{% if org %}{{org}} {% endif %}{% trans title %}</a>
 </h2> 
 
 {% for obj in objects %}
@@ -22,7 +23,7 @@
 </div>
 </td> 
 </tr> 
-<tr><td colspan="2" align="right"><a style="{{a_style}}" href="http://www.eso.org{{ obj.get_absolute_url }}">{{readmore|default:"Read more"}}</a></td></tr> 
+<tr><td colspan="2" align="right"><a style="{{a_style}}" href="http://www.eso.org{{ obj.get_absolute_url }}">{{readmore|default:_("Read more")}}</a></td></tr> 
 </table> 
 {% endfor %}
 {% endif %}
