--- a/src/djangoplicity/newsletters/templates/newsletters/includes/footer.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/footer.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!-- // Begin Template Footer \\ --> 
                                 	<table border="0" cellpadding="0" cellspacing="0" width="{% include "newsletters/includes/width.html" %}" id="templateFooter" style="background-color: #FFFFFF;border-top: 0;"> 
                                     	<tr> 
@@ -16,7 +17,7 @@
                                                                 {% endif %}{% if obj.comparison %}
 																<a href="{{base_url}}{{obj.comparison.get_absolute_url}}"><img style="border:0px;margin:2px;" src="{{base_url}}{{obj.comparison.resource_wallpaperthumbs.url}}" alt="{{obj.comparison.title}}"></img></a>&nbsp;{% endif %}
                                                                 {% endfor %}
-                                                                <div style="font-size:16px;color:white; padding-top: 5px;"><a href="{{potw_feed_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;<a style="font-size:16px;color:white;text-decoration:none;" href="{{base_url}}{% url potw_defaultquery %}">{{ org }} Pictures of the Week</a>
+																<div style="font-size:16px;color:white; padding-top: 5px;"><a href="{{potw_feed_url}}"><img border="0" src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;<a style="font-size:16px;color:white;text-decoration:none;" href="{{base_url}}{% url potw_defaultquery %}">{{ org }} {% trans "Pictures of the Week" %}</a>
                                                                 <hr size="1" style="color: #bbbbbb; background-color: #bbbbbb; border: 0; height: 1px;" /> 
                                                                 </div>
                                                                 {% endif %} 
@@ -24,7 +25,7 @@
                                                                 {% if footer_note %}<p style="font-size: 11px;">{{ footer_note }}</p>{% endif%} 
                                                                 {% include "newsletters/includes/preferences_bottom.html" %}
                                                                 {% include "newsletters/includes/footer_followus.html" %}
-																<p style="font-size: 11px; text-align:center; margin-bottom: 0px;">European Southern Observatory, Karl-Schwarzschild-Str 2, D-85748 Garching bei M&uuml;nchen, Germany</p>
+																<p style="font-size: 11px; text-align:center; margin-bottom: 0px;">{% trans "European Southern Observatory" %}, Karl-Schwarzschild-Str 2, D-85748 Garching bei M&uuml;nchen, Germany</p>
                                                                 </div>
                                                             </div> 
                                                         </td>
