--- a/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% if release %}{% load release_links djangoplicity_datetime %}
 {% if embargo %}
 <div style="padding: 10px; font-size: 18px; background-color: #f4c819; text-align: center; font-weight: bold;">
@@ -7,18 +8,18 @@ EMBARGOED* UNTIL {{release.release_date|time4lang:"en"|datetime:"DATETIME" }}
 {% endif %}
 <p>{{release.headline|linebreaksbr|description_links|release_ids|safe}}</p>
 
-<p>The release, images and videos are available on:<br/>
+<p>{% trans "The release, images and videos are available on:" %}<br/>
 <a href="{{base_url}}{{release.get_absolute_url}}">{{base_url}}{{release.get_absolute_url}}</a>{% if embargo %} (login: <strong>{{release.get_embargo_login.0}}</strong> password: <strong>{{release.get_embargo_login.1}}</strong>){% endif %}</p>
 
 
 {% block translations %}
-{%if release.get_translations.languages %}<p>Translations are available in: {% for translation in release.get_translations.languages %}<a href="{{base_url}}{{translation.object.get_absolute_url}}">{{translation.name}}</a>{% if not forloop.last %}, {% endif %}{%endfor%}</p>
+{%if release.get_translations.languages %}<p>{% trans "Translations are available in:"%} {% for translation in release.get_translations.languages %}<a href="{{base_url}}{{translation.object.get_absolute_url}}">{{translation.name}}</a>{% if not forloop.last %}, {% endif %}{%endfor%}</p>
 {% endif %}
-{% if release.kids_title and release.kids_description %}<p>Space Scoop - the children's version of this release is available at: <a href="{{base_url}}{% url releases_detail_kids release %}">{{base_url}}{% url releases_detail_kids release %}</a></p>{% endif %}{% endblock %}
+{% if release.kids_title and release.kids_description %}<p>{% trans "Space Scoop - the children's version of this release is available at:" %} <a href="{{base_url}}{% url releases_detail_kids release %}">{{base_url}}{% url releases_detail_kids release %}</a></p>{% endif %}{% endblock %}
 
 {% if signature %}
 <p>
-Kind regards,<br />
+{% trans "Kind regards" %},<br />
 {{signature|safe}}<br />
 {% if signature_date %}{{signature_date|date}}{% endif %}
 </p>
