Added link to original html + text in newsletterproxy

--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletterproxy/change_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletterproxy/change_form.html
@@ -5,6 +5,8 @@
 {% if change %}{% if not is_popup %}
   <ul class="object-tools">
     {% block object-tools-items %}
+	<li><a href="../../newsletter/{{ original.source.id }}/html/" class="historylink">{% trans "Original HTML" %}</a></li>
+	<li><a href="../../newsletter/{{ original.source.id }}/text/" class="historylink">{% trans "Original text" %}</a></li>
     <li><a href="html/" class="historylink">{% trans "View HTML" %}</a></li>
     <li><a href="text/" class="historylink">{% trans "View text" %}</a></li>
     <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
