Misc template fixes

--- a/src/djangoplicity/newsletters/templates/newsletters/outreach-text.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/outreach-text.html
@@ -8,7 +8,7 @@ ESO ANNOUNCEMENTS
 
 {{ obj.release_date|date }}: {{ obj.description|striptags|truncatewords:50|unescape|safe }} [read more on http://www.eso.org{{ obj.get_absolute_url }}]
 {% endfor %}
-See latest ESO annoucements on http://www.eso.org/public/announcements/
+See latest ESO announcements on http://www.eso.org/public/announcements/
 
 =========
 STARS@ESO
