--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/unschedule_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/unschedule_form.html
@@ -33,7 +33,7 @@ window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{%
 <p>Newsletter have already been sent.</p>
 </div>
 </fieldset>
-{% else %}{% if not original.scheduled %}
+{% else %}{% if original.scheduled_status = 'OFF' %}
 <fieldset class="module" style="background-color: #FFC; ">
 <div class="form-row">
 <p>Newsletter is not already unscheduled</p>
