Select template based on NL type

--- a/src/djangoplicity/newsletters/templates/newsletters/newsletter_list.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/newsletter_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}                                                                                                                                                                                  
+{% extends template_name %}                                                                                                                                                                                  
 
 {% block site_title %}{{ newsletter_type.name }}{% endblock %}
 
