--- a/src/djangoplicity/newsletters/templates/newsletters/includes/esocasts.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/esocasts.html
@@ -1,4 +1,5 @@
 {# ############### ESOCASTS ############### #}
+{% load djangoplicity_datetime %}
 {% if data.esocasts %}
 <br/> 
 <hr style="{{hr_style}}"/> 
@@ -20,7 +21,7 @@
 <a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="http://www.eso.org{{ obj.get_absolute_url }}">{{ obj.title }}{% if obj.subtitle%} &mdash; {{ obj.subtitle }}{% endif%}</a>
 </h3>
 <div style="font-family: Helvetica, Arial;font-size: 12px;color:#505050;">
-<p><strong>{{ obj.release_date|date }}:</strong> {{ obj.headline|striptags|truncatewords:30|safe }}</p> 
+<p><strong>{{ obj.release_date|datetime:"DATE" }}:</strong> {{ obj.headline|striptags|truncatewords:30|safe }}</p> 
 </div>
 </td> 
 </tr> 
