--- a/src/djangoplicity/newsletters/templates/newsletters/newsletter_list.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/newsletter_list.html
@@ -29,7 +29,7 @@ care about shadowbox on these pages we just hide the div
 {% block index_image_cell %}<td class="imagerow" width="25%"><a href="{{ item.get_absolute_url }}"><img src="{{ item.resource_thumbs.url }}" width="122" alt="{{item.title}}" /></a></td>{% endblock %}{% endfor %}
 </tr>
 <tr>{% for item in list %}
-{% block index_title_cell %}<td class="titlerow"><a href="{{ item.get_absolute_url }}">{{item.subject}}</a></td>{% endblock %}{% endfor %}
+	{% block index_title_cell %}<td class="titlerow"><a href="{{ item.get_absolute_url }}">{% if item.subject %}{{ item.subject }}{% else %}{{ item.source.subject }}{% endif %}</a></td>{% endblock %}{% endfor %}
 </tr>
 {% endblock %}
 {% endfor %}
