--- a/src/djangoplicity/newsletters/templates/newsletters/newsletter_detail.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/newsletter_detail.html
@@ -14,7 +14,7 @@
 </style>
 
 <div id="nl_detail_header">
-	<p><a href="{% url newsletter_list newsletter_type.slug %}">Back to {{ newsletter_type }} index</a> </p>
+	<p><a href="{% url newsletters_defaultquery newsletter_type.slug %}">Back to {{ newsletter_type }} index</a> </p>
 </div>
 {{ newsletter_html|safe }}
 
