--- a/src/djangoplicity/newsletters/templates/newsletters/includes/preferences_bottom.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/preferences_bottom.html
@@ -1,8 +1,8 @@
 {% if unsubscribe_link %}<p style="font-size: 11px;">You are receiving this newsletter because {{reason}}</p>{% endif %} 
-{% if unsubscribe_link or preferences_link or browser_link %}
+{% if unsubscribe_link or preferences_link or browser_link or enable_archive and use_local_archive %}
 <p style="font-size: 11px; text-align:center;">
 {% if unsubscribe_link %}<a href="{{unsubscribe_link}}" style="color:white">Unsubscribe</a>{% endif %}
 {% if preferences_link %}{% if unsubscribe_link %} | {%endif%}<a href="{{preferences_link}}" style="color:white">Subscription preferences</a>{% endif %}
-{% if browser_link and enable_sharing %}{% if unsubscribe_link or preferences_link %} | {%endif%} <a href="{{browser_link}}" style="color:white">View in browser</a>{% endif %}
+{% if browser_link and enable_sharing or use_local_archive %}{% if unsubscribe_link or preferences_link %} | {%endif%} <a href="{% if use_local_archive %}{{ base_url }}{{ newsletter_type.get_absolute_url }}{% else %}{{ browser_link }}{% endif %}" style="color:white">View in browser</a>{% endif %}
 </p>
 {% endif %}
