--- a/src/djangoplicity/newsletters/templates/newsletters/includes/preferences_top.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/preferences_top.html
@@ -4,7 +4,7 @@
   <td colspan="2" style="color: #505050;font-family: Helvetica, Arial;font-size: 10px;line-height: 100%; text-align:center;">
 	  {% if unsubscribe_link %}<a href="{{unsubscribe_link}}">{% trans "Unsubscribe"%}</a>{% endif %}
 	  {% if preferences_link %}{% if unsubscribe_link %} | {%endif%}<a href="{{preferences_link}}">{% trans "Subscription preferences"%}</a>{% endif %}
-	  {% if browser_link and enable_sharing or use_local_archive %}{% if unsubscribe_link or preferences_link %} | {%endif%} <a href="{% if use_local_archive %}{{ base_url }}{{ newsletter_type.get_absolute_url }}{% else %}{{ browser_link }}{% endif %}">{% trans "View in browser"%}</a>{% endif %}
+	  {% if browser_link and enable_sharing or use_local_archive %}{% if unsubscribe_link or preferences_link %} | {%endif%} <a href="{% if use_local_archive %}{{ base_url }}{{ newsletter.get_absolute_url }}{% else %}{{ browser_link }}{% endif %}">{% trans "View in browser"%}</a>{% endif %}
 	</td> 
 </tr> 
 {% endif %}
