--- a/src/djangoplicity/newsletters/templates/newsletters/includes/preferences_bottom.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/preferences_bottom.html
@@ -1,8 +1,9 @@
-{% if unsubscribe_link %}<p style="font-size: 11px;">You are receiving this newsletter because {{reason}}</p>{% endif %} 
+{% load i18n %}
+{% if unsubscribe_link %}<p style="font-size: 11px;">{% blocktrans%}You are receiving this newsletter because {{reason}}{% endblocktrans %}</p>{% endif %} 
 {% if unsubscribe_link or preferences_link or browser_link or enable_archive and use_local_archive %}
 <p style="font-size: 11px; text-align:center;">
-{% if unsubscribe_link %}<a href="{{unsubscribe_link}}" style="color:white">Unsubscribe</a>{% endif %}
-{% if preferences_link %}{% if unsubscribe_link %} | {%endif%}<a href="{{preferences_link}}" style="color:white">Subscription preferences</a>{% endif %}
-{% if browser_link and enable_sharing or use_local_archive %}{% if unsubscribe_link or preferences_link %} | {%endif%} <a href="{% if use_local_archive %}{{ base_url }}{{ newsletter.get_absolute_url }}{% else %}{{ browser_link }}{% endif %}" style="color:white">View in browser</a>{% endif %}
+{% if unsubscribe_link %}<a href="{{unsubscribe_link}}" style="color:white">{% trans "Unsubscribe"%}</a>{% endif %}
+{% if preferences_link %}{% if unsubscribe_link %} | {%endif%}<a href="{{preferences_link}}" style="color:white">{% trans "Subscription preferences"%}</a>{% endif %}
+{% if browser_link and enable_sharing or use_local_archive %}{% if unsubscribe_link or preferences_link %} | {%endif%} <a href="{% if use_local_archive %}{{ base_url }}{{ newsletter.get_absolute_url }}{% else %}{{ browser_link }}{% endif %}" style="color:white">{% trans "View in browser"%}</a>{% endif %}
 </p>
 {% endif %}
