Added more strings for translations

--- a/src/djangoplicity/newsletters/templates/newsletters/includes/footer.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/footer.html
@@ -22,7 +22,7 @@
                                                                 </div>
                                                                 {% endif %} 
                                                                 <div style="text-align:left;padding-top:5px;color:white; background-color:#292929;">
-                                                                {% if footer_note %}<p style="font-size: 11px;">{{ footer_note }}</p>{% endif%} 
+                                                                {% if footer_note %}<p style="font-size: 11px;">{% trans footer_note %}</p>{% endif%} 
                                                                 {% include "newsletters/includes/preferences_bottom.html" %}
                                                                 {% include "newsletters/includes/footer_followus.html" %}
 																<p style="font-size: 11px; text-align:center; margin-bottom: 0px;">{% trans "European Southern Observatory" %}, Karl-Schwarzschild-Str 2, D-85748 Garching bei M&uuml;nchen, Germany</p>
