--- a/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
@@ -2,7 +2,7 @@
 {% if release %}{% load release_links djangoplicity_datetime djangoplicity_utils  %}
 {% if embargo %}
 <div style="padding: 10px; font-size: 18px; background-color: #f4c819; text-align: center; font-weight: bold;">
-EMBARGOED* UNTIL {{release.release_date|time4lang:"en"|datetime:"DATETIME" }}
+{% trans "EMBARGOED* UNTIL"%} {{release.release_date|time4lang:"en"|datetime:"DATETIME" }}
 </div>
 <div style="padding: 10px; font-size: 12px; background-color: #eeeeee;">
 {% endif %}
@@ -13,7 +13,7 @@ EMBARGOED* UNTIL {{release.release_date|time4lang:"en"|datetime:"DATETIME" }}
 
 
 {% block translations %}
-{%if release.get_translations.languages %}<p>{% trans "Translations are available on your country page:"%} {% for country in release.get_translations.countries %}{% for translation in country %}{% if forloop.counter0 > 0 %}&mdash;{% endif %}<a href="{{base_url}}{{translation.object.get_absolute_url}}">{{ translation.full_code|code_to_local_country }}</a>{% endfor %}{% if not forloop.last %}, {% endif %}{%endfor%}</p>
+{%if release.get_translations.languages %}<p>{% trans "Translations are available on your country page"%}: {% for country in release.get_translations.countries %}{% for translation in country %}{% if forloop.counter0 > 0 %}&mdash;{% endif %}<a href="{{base_url}}{{translation.object.get_absolute_url}}">{{ translation.full_code|code_to_local_country }}</a>{% endfor %}{% if not forloop.last %}, {% endif %}{%endfor%}</p>
 
 {% endif %}
 {% if release.kids_title and release.kids_description %}<p>{% trans "Space Scoop - the children's version of this release is available at:" %} <a href="{{base_url}}{{ release.get_absolute_url }}kids/">{{base_url}}{{ release.get_absolute_url }}kids/</a></p>{% endif %}{% endblock %}
