--- a/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
@@ -2,7 +2,11 @@
 {% if release %}{% load release_links djangoplicity_datetime djangoplicity_utils  %}
 {% if embargo %}
 <div style="padding: 10px; font-size: 18px; background-color: #f4c819; text-align: center; font-weight: bold;">
+{% if language == "no" %}
+{% trans "EMBARGOED* UNTIL"%} {{release.release_date|datetime:"DATETIME" }}
+{% else %}
 {% trans "EMBARGOED* UNTIL"%} {{release.release_date|time4lang:"en"|datetime:"DATETIME" }}
+{% endif %}
 </div>
 <div style="padding: 10px; font-size: 12px; background-color: #eeeeee;">
 {% endif %}
