Added displays for newsletters

--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/change_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/change_form.html
@@ -11,6 +11,8 @@
     {% if not original.send and original.scheduled_status != 'OFF' %}<li><a href="unschedule/" class="historylink">{% trans "Cancel schedule" %}</a></li>{% endif %}
     <li><a href="html/" class="historylink">{% trans "View HTML" %}</a></li>
     <li><a href="text/" class="historylink">{% trans "View text" %}</a></li>
+	<li><a href="displays/" class="historylink" onclick='window.open( "displays/", "displayWindow",
+		"status = 1, height = 600, width = 800, resizable = 1" );return false;'>{% trans "Displays" %}</a></li>
     <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
     {% if has_absolute_url %}<li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
     {% endblock %}
